🚀 Despliegue completo con SSL y documentación actualizada
✅ Dashboard funcionando en: https://vps-0c525a03.vps.ovh.ca/
✅ Certificado SSL configurado y activo
✅ Nginx como proxy reverso optimizado
✅ 190+ métricas XM integradas y operativas

📚 Documentación:
- README.md completamente reescrito como guía detallada
- CORREO_EQUIPO.md con instrucciones prácticas de uso
- Scripts optimizados (deploy.sh, start_app.sh)

🔧 Configuración:
- .gitignore actualizado para excluir archivos innecesarios
- CHANGELOG.md eliminado (información migrada a README.md)
- Aplicación configurada para producción

🌐 URLs disponibles:
- HTTPS: https://vps-0c525a03.vps.ovh.ca/ (principal)
- Directo: http://148.113.203.44:8056/ (desarrollo)

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,30 @@ MANIFEST
 *.manifest
 *.spec
 
+# Scripts de despliegue y configuración
+*.sh
+!start_app.sh
+!deploy.sh
+
+# Archivos de correos y comunicación
+CORREO_*.md
+
+# Logs y archivos temporales
+logs/
+*.log
+
+# Environment files
+.env
+.venv
+dashboard_env/
+
+# VSCode
+.vscode/
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
