feat: Add production deployment scripts and auto-update system
- Add auto-update.sh: Safe automatic updates from GitHub with backup/rollback
- Add setup-auto-update.sh: Configure automatic updates with cron
- Update manage-server.sh: Simplified management without systemd dependencies
- Update quick-check.sh: Fixed verification without systemd
- Update deploy.sh: Use manual process instead of problematic systemd
- Update .gitignore: Clean configuration for production
- Remove unnecessary scripts and optimize for production deployment

All scripts now work independently without systemd issues.
Dashboard fully functional at https://vps-0c525a03.vps.ovh.ca/

--- a/.gitignore
+++ b/.gitignore
@@ -29,13 +29,8 @@ MANIFEST
 *.manifest
 *.spec
 
-# Scripts de despliegue y configuración
-*.sh
-!start_app.sh
-!deploy.sh
-
 # Archivos de correos y comunicación
-CORREO_*.md
+CORREO_EQUIPO.md
 
 # Logs y archivos temporales
 logs/
