feat: informe ejecutivo con contexto de prensa + PDF descargable
- Orquestador: inyecta noticias filtradas en contexto del informe (sección 3.3 Perspectiva de prensa)
- ReportService: generación PDF con WeasyPrint (estilo corporativo MME)
- Telegram: informe completo directo (sin menú de secciones redundante)
- Telegram: botón 📥 Descargar PDF en informe
- Telegram: /noticias registrado en menú de comandos (set_my_commands)
- Fix: dependencias WeasyPrint (libpango, libcairo)
- Fix: emojis corruptos en ayuda
- Fix: instancias duplicadas del bot (usar systemd)

--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,6 @@ pytest-cov==4.1.0
 # Base de datos (PostgreSQL preparado)
 psycopg2-binary==2.9.9
 SQLAlchemy==2.0.25
+
+# PDF generation
+weasyprint>=60.0
