--- a/config/celery-worker@.service
+++ b/config/celery-worker@.service
@@ -8,6 +8,7 @@ Type=simple
 User=admonctrlxm
 Group=admonctrlxm
 WorkingDirectory=/home/admonctrlxm/server
+EnvironmentFile=/home/admonctrlxm/server/.env
 Environment="PYTHONPATH=/home/admonctrlxm/server"
 Environment="LANG=en_US.UTF-8"
 Environment="LC_ALL=en_US.UTF-8"
